bugfix/pagination-covering

--- a/src/css/shopping-list.css
+++ b/src/css/shopping-list.css
@@ -5,6 +5,7 @@
   --description-color: #b4afaf;
   --text-color: #111;
 }
+
 @media screen and (min-width: 375px) {
   .shopping-list-container {
     width: calc(335px + 2 * 20px);
@@ -12,6 +13,7 @@
     margin-right: auto;
   }
 }
+
 @media screen and (max-width: 767px) {
   .shopping-list-title-book {
     overflow: hidden;
@@ -21,14 +23,17 @@
     max-width: 144px;
   }
 }
+
 @media screen and (max-width: 1439px) {
   .page-shopping-list .shopping-list-support-ukraine {
     display: none;
   }
+
   .shopping-list-book-author {
     overflow: hidden;
   }
 }
+
 .shopping-list-title {
   font-size: 32;
   font-weight: 700;
@@ -37,9 +42,11 @@
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
 .shopping-list-title-next-color {
   color: var(--brand-color);
 }
+
 .shopping-list-book-image-wrapper {
   width: 100px;
   height: 142px;
@@ -67,6 +74,7 @@
   display: block;
   border-radius: 8px;
 }
+
 .shopping-list-list-name {
   color: var(--description-color);
   max-width: 165px;
@@ -81,6 +89,7 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
 .shopping-list-book-author {
   position: absolute;
   bottom: 14px;
@@ -96,6 +105,7 @@
   -webkit-box-orient: vertical;
   letter-spacing: -0.48px;
 }
+
 .shopping-list-title-book {
   color: var(--text-color);
   text-transform: uppercase;
@@ -106,6 +116,7 @@
   font-weight: 700;
   line-height: 1.12;
 }
+
 .shopping-list-description {
   color: var(--text-color);
   text-align: left;
@@ -124,10 +135,12 @@
   line-height: 1.28;
   margin-bottom: 16px;
 }
+
 .shopping-list-author-links {
   bottom: 14px;
   width: 193px;
 }
+
 .shopping-list-links-list {
   position: absolute;
   bottom: 14px;
@@ -137,36 +150,43 @@
   gap: 8px;
   align-items: center;
 }
+
 .shopping-list-links-icon {
   width: 16px;
   height: 16px;
   filter: grayscale();
   transition: filter, all 0.25s linear;
 }
+
 .shopping-list-links-icon:hover,
 .shopping-list-links-icon:focus {
   filter: grayscale() drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
 }
+
 .shopping-list-links-icon-amazon {
   width: 32px;
   height: 11px;
   filter: grayscale();
   transition: filter, all 0.25s linear;
 }
+
 .shopping-list-links-icon-amazon:hover,
 .shopping-list-links-icon-amazon:focus {
   filter: grayscale() drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
 }
+
 .shopping-list-links-icon-apple {
   width: 16px;
   height: 16px;
   filter: grayscale();
   transition: filter, all 0.25s linear;
 }
+
 .shopping-list-links-icon-apple:hover,
 .shopping-list-links-icon-apple:focus {
   filter: grayscale() drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
 }
+
 .shopping-list-btn-remove {
   position: absolute;
   top: 14px;
@@ -174,6 +194,7 @@
   background: none;
   border: none;
 }
+
 .shopping-list-icon-remove {
   fill: var(--brand-color);
   stroke: var(--white-color);
@@ -181,10 +202,12 @@
   height: 28px;
   transition: fill, all 0.25s linear;
 }
+
 .shopping-list-icon-remove:hover,
 .shopping-list-icon-remove:focus {
   fill: #eac645;
 }
+
 .shopping-list-default {
   display: flex;
   flex-direction: column;
@@ -204,9 +227,11 @@
   max-width: 244px;
   margin-bottom: 14px;
 }
+
 .shopping-list-pagination-container {
   display: flex;
 }
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -221,6 +246,7 @@
   border-radius: 36px;
   background-color: var(--body-color);
   box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 0;
 }
 
 .pagination-prev,
@@ -237,6 +263,7 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
 .pagination-prev:hover,
 .pagination-next:focus {
   background-color: #eac645;
@@ -247,6 +274,7 @@
   background-color: #ccc;
   cursor: not-allowed;
 }
+
 .pagination-total,
 .pagination-current {
   color: var(--text-color);
@@ -256,73 +284,89 @@
   font-weight: 700;
   line-height: 1.22;
 }
+
 .shopping-list-empty {
   display: none;
 }
+
 @media screen and (min-width: 768px) {
   .container {
     width: calc(704px + 2 * 32px);
     padding-left: 32px;
     padding-right: 32px;
   }
+
   .shopping-list-title {
     letter-spacing: -1.92px;
     font-size: 48px;
     line-height: 1.08;
   }
+
   .shopping-list-js-book {
     height: auto;
     max-width: 704px;
     gap: 24px;
     padding: 24px;
   }
+
   .shopping-list-book-image {
     width: 116px;
     max-height: 165px;
   }
+
   .shopping-list-title-book {
     width: 508px;
     line-height: 1.3;
   }
+
   .shopping-list-list-name {
     max-width: 100%;
     margin-bottom: 14px;
   }
+
   .shopping-list-description {
     width: 508px;
     height: auto;
     margin-bottom: 0;
     line-height: 1.29;
   }
+
   .shopping-list-icon-remove {
     width: 34px;
     height: 34px;
   }
+
   .shopping-list-btn-remove {
     top: 24px;
     right: 24px;
   }
+
   .shopping-list-book-author {
     width: 120px;
     bottom: 14px;
   }
+
   .shopping-list-links-list {
     gap: 16px;
     bottom: 24px;
     right: 24px;
   }
+
   .shopping-list-links-icon {
     width: 32px;
     height: 30px;
   }
+
   .shopping-list-links-icon-apple {
     width: 28px;
     height: 27px;
   }
+
   .shopping-list-links-icon-amazon {
     width: 48px;
     height: 15px;
   }
+
   .shopping-list-author-links {
     width: 530px;
     bottom: 24px;
@@ -331,6 +375,7 @@
     justify-content: space-between;
     display: flex;
   }
+
   .shopping-list-default-message {
     letter-spacing: -0.36px;
     max-width: 349px;
@@ -340,11 +385,13 @@
     font-weight: 400;
     line-height: 1.3;
   }
+
   .shopping-list-default-picture {
     width: 322px;
     height: 241px;
     display: block;
   }
+
   .shopping-list-default {
     display: flex;
     flex-direction: column;
@@ -352,46 +399,58 @@
     justify-content: center;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .container {
     width: calc(1392px + 2 * 24px);
     padding-left: 24px;
     padding-right: 24px;
   }
+
   .shopping-list-container {
     display: flex;
   }
+
   .shopping-list-styles-tab {
     margin-left: 40px;
   }
+
   .shopping-list-title {
     margin-top: 0;
   }
+
   .page-shopping-list .shopping-list-support-ukraine {
     height: 474px;
   }
+
   .shopping-list-js-book {
     height: 213px;
     min-width: 996px;
     gap: 24px;
     padding: 24px;
   }
+
   .shopping-list-links-list {
     bottom: 30px;
   }
+
   .shopping-list-description {
     width: 808px;
   }
+
   .shopping-list-default {
     margin-left: 355px;
   }
+
   .shopping-list-author-links {
     width: 822px;
   }
+
   .shopping-list-book-author {
     width: auto;
     bottom: 30px;
   }
+
   .pagination {
     left: 50%;
     transform: translateX(-23%);
